Commit : Full completed pipelines